--- a/blog-manager/blog-manager-web/pom.xml
+++ b/blog-manager/blog-manager-web/pom.xml
@@ -113,7 +113,11 @@
 			</dependency>
 			
 
-			
+			<dependency>
+				<groupId>redis.clients</groupId>
+				<artifactId>jedis</artifactId>
+				<version>${jedis.version}</version>
+			</dependency>
 		
 		
 	</dependencies>
