--- a/blog-manager/blog-manager-service/pom.xml
+++ b/blog-manager/blog-manager-service/pom.xml
@@ -34,5 +34,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 		</dependency>
+		
+		<dependency>
+				<groupId>redis.clients</groupId>
+				<artifactId>jedis</artifactId>
+				<version>${jedis.version}</version>
+			</dependency>
 	</dependencies>
 </project>
