--- a/blog-sso/src/main/resources/resource/resource.properties
+++ b/blog-sso/src/main/resources/resource/resource.properties
@@ -1,8 +1,10 @@
 #用户session在redis中保存的key
 REDIS_USER_SESSION_KEY=REDIS_USER_SESSION_KEY
  
-#Session的过期时间,30分钟
-SSO_SESSION_EXPIRE=1800
+#Session的过期时间,60分钟
+SSO_SESSION_EXPIRE=3600
 
 #管理员session
 REDIS_USER_ADMIN_SESSION_KEY=REDIS_USER_ADMIN_SESSION_KEY
+
+REDIS_ADMIN_SESSION_KEY=REDIS_ADMIN_SESSION_KEY
