--- a/blog-partal/src/main/resources/resource/resource.properties
+++ b/blog-partal/src/main/resources/resource/resource.properties
@@ -22,5 +22,6 @@ TAOTAO_MAIN=http://localhost:8083/manager/main
 
 #根据token取用户信息url
 SSO_USER_TOKEN=/user/token/
+SSO_ADMIN_TOKEN=/admin/token/
 
 SSO_PAGE_LOGIN=/page/login
