--- a/blog-parent/pom.xml
+++ b/blog-parent/pom.xml
@@ -291,6 +291,14 @@
 				<version>1.8.3</version>
 			</dependency>
 
+			<!-- websocket -->
+			<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-websocket</artifactId>
+				<version>4.1.3.RELEASE</version>
+			</dependency>
+
 		</dependencies>
 
 	</dependencyManagement>
