--- a/blog-partal/src/main/resources/resource/resource.properties
+++ b/blog-partal/src/main/resources/resource/resource.properties
@@ -9,7 +9,7 @@ FTP_BASE_PATH=/home/ftpuser/www/images
 IMAGE_BASE_URL=http://139.199.158.214/images
 
 REST_BASE_URL=http://139.199.158.214:8101/rest
-REST_CONTENT_SYNC_URL=/cache/sync/content/
+
 
 #单点登录系统的url
 SSO_BASE_URL=http://localhost:8087/sso/
@@ -27,11 +27,18 @@ SSO_ADMIN_TOKEN=/admin/token/
 SSO_PAGE_LOGIN=/page/login
 
 
-#\u641C\u7D22\u670D\u52A1URL
+#搜索服务URL
 SEARCH_BASE_URL=http://localhost:8086/search/search/query
-#\u5546\u54C1\u57FA\u672C\u4FE1\u606Furl
+
+#商品基本信息url
 ITEM_INFO_URL=/item/info/
-#\u5546\u54C1\u63CF\u8FF0
+#商品描述
 ITEM_DESC_URL=/item/desc/
-#\u5546\u54C1\u89C4\u683C\u53C2\u6570url
+#商品规格参数url
 ITEM_PARAM_URL=/item/param/
+
+
+#商品信息
+REDIS_ITEM_KEY=REDIS_ITEM_KEY
+#过期时间,默认为1天
+REDIS_ITEM_EXPIRE=86400
