--- a/blog-partal/src/main/resources/resource/resource.properties
+++ b/blog-partal/src/main/resources/resource/resource.properties
@@ -8,7 +8,7 @@ FTP_BASE_PATH=/home/ftpuser/www/images
 
 IMAGE_BASE_URL=http://139.199.158.214/images
 
-REST_BASE_URL=http://139.199.158.214:8101/rest
+REST_BASE_URL=http://localhost:8084/rest/rest
 
 
 #单点登录系统的url
