--- a/blog-partal/src/main/resources/resource/resource.properties
+++ b/blog-partal/src/main/resources/resource/resource.properties
@@ -42,3 +42,10 @@ ITEM_PARAM_URL=/item/param/
 REDIS_ITEM_KEY=REDIS_ITEM_KEY
 #过期时间,默认为1天
 REDIS_ITEM_EXPIRE=86400
+
+
+
+#订单系统基础url
+ORDER_BASE_URL=http://localhost:8088/order/order
+
+ORDER_CREATE_URL=/create
