修护用户登录流程错误

--- a/blog-manager/blog-manager-service/pom.xml
+++ b/blog-manager/blog-manager-service/pom.xml
@@ -34,6 +34,16 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jsp-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		
 		<dependency>
 				<groupId>redis.clients</groupId>
