--- a/blog-partal/src/main/resources/resource/resource.properties
+++ b/blog-partal/src/main/resources/resource/resource.properties
@@ -49,3 +49,10 @@ REDIS_ITEM_EXPIRE=86400
 ORDER_BASE_URL=http://localhost:8088/order/order
 
 ORDER_CREATE_URL=/create
+
+
+#用户session在redis中保存的key
+REDIS_USER_SESSION_KEY=REDIS_USER_SESSION_KEY
+ 
+#Session的过期时间,60分钟
+SSO_SESSION_EXPIRE=3600
