--- a/blog-manager/blog-manager-web/src/main/resources/resource/resource.properties
+++ b/blog-manager/blog-manager-web/src/main/resources/resource/resource.properties
@@ -26,4 +26,8 @@ SSO_ADMIN_TOKEN=/admin/token/
 
 SSO_PAGE_LOGIN=/page/login
 
-
+#用户session在redis中保存的key
+REDIS_USER_SESSION_KEY=REDIS_USER_SESSION_KEY
+ 
+#Session的过期时间,60分钟
+SSO_SESSION_EXPIRE=3600
